fix text overflowing on small screen

--- a/projects/laji/src/app/+theme/kerttu/kerttu-letter-annotation/letter-annotation/letter-annotation.component.scss
+++ b/projects/laji/src/app/+theme/kerttu/kerttu-letter-annotation/letter-annotation/letter-annotation.component.scss
@@ -60,7 +60,7 @@ h3, h4 {
     transition: none;
   }
 
-  #letterAnnotationQuestionContainer lu-button button {
+  #letterAnnotationButtons lu-button button {
     min-width: 100px;
     white-space: nowrap;
   }
